# quotes

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  client_run.py  docker-compose.yml  generate.py  protocol.txt  quotes.proto
client/: __init__.py  controller.py  recieve.py  send.py
include/quotes/: asset.h  assets.h  assets_manager.h  clients.h  server.h  session.h  types.h
server/: CMakeLists.txt
server/include/quotes/: asset.h  assets_manager.h  clients_manager.h  events.h  log.h  server.h  session.h  utils.h
server/src/: CMakeLists.txt  asset.cpp  assets_manager.cpp  clients_manager.cpp  main.cpp  server.cpp  session.cpp  utils.cpp
src/: CMakeLists.txt  asset.cpp  assets_manager.cpp  clients.cpp  main.cpp  server.cpp  session.cpp
